--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <a href="home/index.html"></a>
             </div>
         </div>
-        <a href="home/index.html" id='hati' class='fixed-bottom text-center my-3' style="color: black;" onclick='hati()'></span>
+        <a href="shree/index.html" id='hati' class='fixed-bottom text-center my-3' style="color: black;" onclick='hati()'></span>
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.19/dist/sweetalert2.all.min.js"></script>
         <script type="text/javascript">
             const author = 'Vandika';
