--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             });
             async function mulai(){
                 await swals.fire({
-                    imageUrl: 'https://unsplash.it/400/200',
+                    imageUrl: 'https://images.unsplash.com/photo-1631873424136-5b7c419646d4?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=334&q=80',
                     imageWidth: 200,
                     imageHeight: 200,
                     imageAlt: 'Custom image',
