--- a/shree/index.html
+++ b/shree/index.html
@@ -43,7 +43,7 @@
 
 <body class="main-layout">
   <audio autoplay loop>
-    <source src="lagu.mp3" type="audio/mpeg"/>
+    <embed name="happy birthdaty" src="lagu.mp3" loop="true" hidden="true" autostart="true">
   </audio>
   <!-- loader  -->
   
