--- a/shree/index.html
+++ b/shree/index.html
@@ -43,7 +43,7 @@
 
 <body class="main-layout">
   <audio autoplay loop>
-    <embed name="happy birthdaty" src="lagu.mp3" loop="true" hidden="true" autostart="true">
+    <embed name="happy birthday" src="lagu.mp3" loop="true" hidden="true" autostart="true">
   </audio>
   <!-- loader  -->
   
@@ -105,7 +105,7 @@
                   <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                     <div class="text-bg">
                      <span style="font-size: large;"><strong><em>Selamat Ulang Tahun</em></strong></span>
-                      <h1>Kekeyi Anindiya</h1>
+                      <h1>Kekeyi</h1>
                       <p class="typewrite" data-period="2000" data-type='[ "Semoga panjang umur", "sehat selalu", "berbakti kepada orang tua", "dan mencintaiku selamanya" ]'>
                       </p>
                     </div>
@@ -231,26 +231,26 @@
     <div class="row">
       <div class="col-md-12">
         <div  class="titlepage">
-          <h2> Fresh <strong class="llow">vegetable</strong> </h2>
+          <h2> Fresh <strong class="llow">kenangan</strong> </h2>
         </div>
       </div>
     </div>
     <div class="row">
       <div class="col-xl-5 col-lg-5 col-md-5 col-sm-12 ">
         <div class="vegetable_shop">
-          <h3>Best Vegetables Shop</h3>
-          <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages andIt is a long established fact that a reader will be distracted </p>
+          <h3>Kenangan kita</h3>
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
         </div>
       </div>
        <div class="col-xl-7 col-lg-7 col-md-7 col-sm-12 ">
         <div class="vegetable_img">
-         <figure><img src="images/v1.jpg" alt="#"/></figure>
+         <figure><img src="https://unsplash.com/photos/k_z16ECarPQ" alt="#"/></figure>
          <span>01</span>
         </div>
       </div>
        <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 ">
         <div class="vegetable_img margin_top">
-         <figure><img src="images/v2.jpg" alt="#"/></figure>
+         <figure><img src="https://images.unsplash.com/photo-1593186508561-3faf620cc75c?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8Y291cGxlfGVufDB8MHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="#"/></figure>
          <span>02</span>
         </div>
       </div>
@@ -268,7 +268,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="titlepage">
-                        <h2>testimonial</h2>
+                        <h2>Ucapan dari mereka</h2>
                     </div>
                 </div>
             </div>
@@ -386,7 +386,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-12">
-             <a href="#" class="logo_footer"> <img src="images/logo2.png" alt="#"/></a>
+<!--              <a href="#" class="logo_footer"> <img src="images/logo2.png" alt="#"/></a> -->
             </div>
             <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 ">
               <!-- <div class="row">
