update background music

--- a/shree/index.html
+++ b/shree/index.html
@@ -298,9 +298,7 @@
              
             </div>
           </footr>
- <audio autoplay loop>
-    <embed name="happy birthday" src="lagu.mp3" loop="true" hidden="true" autostart="true">
- </audio>
+<audio src="lagu.mp3" autoplay loop></audio>.
           <!-- end footer -->
           <!-- Javascript files-->
           <script src="js/jquery.min.js"></script>
