--- a/shree/index.html
+++ b/shree/index.html
@@ -298,7 +298,7 @@
              
             </div>
           </footr>
-<audio src="lagu.mp3" autoplay loop></audio>.
+<audio src="lagu.mp3" autoplay loop controls></audio>.
           <!-- end footer -->
           <!-- Javascript files-->
           <script src="js/jquery.min.js"></script>
